fix docs and tests comments
modify docs example

modify cue and yaml

--- a/docs/examples/rollout-trait/app-revert.yaml
+++ b/docs/examples/rollout-trait/app-revert.yaml
@@ -15,3 +15,6 @@ spec:
           properties:
             targetSize: 5
             targetRevision: express-server-v1
+            rolloutBatches:
+              - replicas: 2
+              - replicas: 3
