--- a/docs/examples/rollout-trait/application.yaml
+++ b/docs/examples/rollout-trait/application.yaml
@@ -13,3 +13,6 @@ spec:
         - type: rollout
           properties:
             targetSize: 5
+            rolloutBatches:
+              - replicas: 2
+              - replicas: 3
