--- a/docs/examples/rollout-trait/app-v3.yaml
+++ b/docs/examples/rollout-trait/app-v3.yaml
@@ -14,3 +14,6 @@ spec:
         - type: rollout
           properties:
             targetSize: 5
+            rolloutBatches:
+              - replicas: 2
+              - replicas: 3
