--- a/charts/vela-core/crds/core.oam.dev_applications.yaml
+++ b/charts/vela-core/crds/core.oam.dev_applications.yaml
@@ -12,7 +12,7 @@ spec:
       clientConfig:
         service:
           name: vela-core-webhook
-          namespace: vela-system
+          namespace: {{ .Release.Namespace }}
           path: /convert
           port: 443
       conversionReviewVersions:
