--- a/docs/examples/obervability/initializer-grafana.yaml
+++ b/docs/examples/obervability/initializer-grafana.yaml
@@ -14,6 +14,39 @@ spec:
   appTemplate:
     spec:
       components:
+        - name: grafana-datasource-registration-release
+          properties:
+            apiVersion: helm.toolkit.fluxcd.io/v2beta1
+            kind: HelmRelease
+            metadata:
+              name: grafana-datasource-registration-release
+              namespace: grafana
+            spec:
+              chart:
+                spec:
+                  chart: ./chart
+                  interval: 1m
+                  sourceRef:
+                    kind: GitRepository
+                    name: grafana-datasource-registration-repo
+                    namespace: grafana
+              interval: 5m
+              values:
+                replicaCount: 1
+          type: raw
+        - name: grafana-datasource-registration-repo
+          properties:
+            apiVersion: source.toolkit.fluxcd.io/v1beta1
+            kind: GitRepository
+            metadata:
+              name: grafana-datasource-registration-repo
+              namespace: grafana
+            spec:
+              interval: 5m
+              ref:
+                branch: master
+              url: https://github.com/zzxwill/grafana-datasource-registration
+          type: raw
         - name: grafana
           properties:
             chart: grafana
@@ -42,6 +75,16 @@ spec:
                 domain: loki.c4c85a750c53a44a38b3902978f85d8e7.cn-hongkong.alicontainer.com
                 http:
                   "/": 3100
+            - type: register-grafana-datasource
+              properties:
+                grafanaUrl: "http://grafana.c4c85a750c53a44a38b3902978f85d8e7.cn-hongkong.alicontainer.com"
+                credentialSecret: grafana
+                credentialSecretNamespace: grafana
+                name: loki
+                url: "http://loki.c4c85a750c53a44a38b3902978f85d8e7.cn-hongkong.alicontainer.com"
+                type: loki
+                access: proxy
+
   dependsOn:
     - ref:
         apiVersion: core.oam.dev/v1beta1
