--- a/docs/examples/app-with-volumes/app-worker-volumes.yaml
+++ b/docs/examples/app-with-volumes/app-worker-volumes.yaml
@@ -14,25 +14,34 @@ spec:
         volumes:
           - name: "my-pvc"
             mountPath: "/var/www/html1"
-            type: "pvc"
-            claimName: "myclaim"
           - name: "my-cm"
             mountPath: "/var/www/html2"
-            type: "configMap"
-            cmName: "myCmName"
-            items:
-              - key: "k1"
-                path: "./a1"
-              - key: "k2"
-                path: "./a2"
           - name: "my-cm-noitems"
             mountPath: "/var/www/html22"
-            type: "configMap"
-            cmName: "myCmName2"
           - name: "mysecret"
-            type: "secret"
             mountPath: "/var/www/html3"
-            secretName: "mysecret"
           - name: "my-empty-dir"
-            type: "emptyDir"
             mountPath: "/var/www/html4"
+      traits:
+        - type: volumes
+          properties:
+            volumes:
+              - name: "my-pvc"
+                type: "pvc"
+                claimName: "myclaim"
+              - name: "my-cm"
+                type: "configMap"
+                cmName: "myCmName"
+                items:
+                  - key: "k1"
+                    path: "./a1"
+                  - key: "k2"
+                    path: "./a2"
+              - name: "my-cm-noitems"
+                type: "configMap"
+                cmName: "myCmName2"
+              - name: "mysecret"
+                type: "secret"
+                secretName: "mysecret"
+              - name: "my-empty-dir"
+                type: "emptyDir"
